--- a/.computenest/ros_templates/template.yaml
+++ b/.computenest/ros_templates/template.yaml
@@ -5,23 +5,6 @@ Conditions:
       - NewVPC
       - Ref: VpcOption
 Parameters:
-  Admin_Email:
-    Type: String
-    Label:
-      en: Admin Email
-      zh-cn: 管理员邮箱
-  GITHUB_CLIENT_ID:
-    Type: String
-    Label:
-      en: Github OAuth App Client Id(Optional)
-      zh-cn: Github OAuth应用ID(可选)
-    Default: ""
-  GITHUB_CLIENT_SECRET:
-    Type: String
-    Label:
-      en: Github OAuth App Client Secret(Optional)
-      zh-cn: Github OAuth应用秘钥(可选)
-    Default: ""
   VpcOption:
     Type: String
     AllowedValues:
@@ -367,16 +350,6 @@ Resources:
             echo "CUSTOM_OAUTH_USER_EMAIL_PATH=aid" >> "$FILE_PATH"
             echo "ADMIN_EMAIL=${Admin_Email}" >> "$FILE_PATH"                          
             echo "DEFAULT_WORKSPACE_PLAN=UNLIMITED" >> "$FILE_PATH"                          
-
-            # 检查并写入 GITHUB_CLIENT_ID
-            if [ -n "${GITHUB_CLIENT_ID}" ]; then
-                echo "GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID}" >> "$FILE_PATH"
-            fi
-
-            # 检查并写入 GITHUB_CLIENT_SECRET
-            if [ -n "${GITHUB_CLIENT_SECRET}" ]; then
-                echo "GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET}" >> "$FILE_PATH"
-            fi
             systemctl start docker-compose-app
           - RegionId:
               Ref: ALIYUN::Region
@@ -397,12 +370,8 @@ Resources:
               Fn::GetAtt:
                 - AppSecret
                 - AppSecretValue
-            GITHUB_CLIENT_SECRET:
-              Ref: GITHUB_CLIENT_SECRET
-            GITHUB_CLIENT_ID:
-              Ref: GITHUB_CLIENT_ID
             Admin_Email:
-              Ref: Admin_Email
+              Ref: ALIYUN::AccountId
 Outputs:
   ServerAddress:
     Description:
@@ -456,11 +425,4 @@ Metadata:
         Label:
           zh-cn: 可用区配置
           en: Availability Zone Configuration
-      - Parameters:
-          - Admin_Email
-          - GITHUB_CLIENT_ID
-          - GITHUB_CLIENT_SECRET
-        Label:
-          zh-cn: 软件配置
-          en: Software Configuration
       
